Fixing our CI/CD pipeline