@@ -3,7 +3,7 @@ import org.gradle.internal.os.OperatingSystem
 plugins {
     id "application"
     id "java"
-    id "org.beryx.jlink" version "2.16.4"
+    id "org.beryx.jlink" version "2.17.6"
 }
 
 final def buildPlatformName = System.getenv("TARGET_PLATFORM")
@@ -58,15 +58,16 @@ if (buildPlatformName != null) {
                 targetPlatform(buildPlatformName, System.getenv("JAVA_HOME_MACOS"))
                 break
             case OperatingSystem.WINDOWS:
-                targetPlatform(buildPlatformName, System.getenv("JAVA_HOME_WINDOWS"))
+                targetPlatform(buildPlatformName, "${System.getenv("HOME")}/repo/jdk/jdk14/jdk-14/")
                 break
         }
 
+        addOptions '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages'
         mergedModule {
         }
         launcher {
             name = 'konna'
-            jvmArgs = []
+            jvmArgs = ['--enable-preview']
         }
     }
 
@@ -83,7 +84,7 @@ if (buildPlatformName != null) {
         }
         launcher {
             name = 'konna'
-            jvmArgs = []
+            jvmArgs = ['--enable-preview']
         }
     }
 
